<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/leaderboard_background"
    tools:context="fall2018.csc2017.GameCentre.ui.menu.view.leaderboard.PuzzleTab">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/myScore"
            android:layout_width="376dp"
            android:layout_height="31dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="8dp"
            android:text="@string/myScore"
            android:textAlignment="center"
            android:textColor="@color/blue_grey_100"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/topTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="8dp"
            android:text="@string/topTitle"
            android:textColor="@color/blue_grey_100"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/myScore" />

        <TextView
            android:id="@+id/firstID"
            android:layout_width="376dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="8dp"
            android:text="@string/first"
            android:textAlignment="center"
            android:textColor="@color/blue_grey_100"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topTitle" />

        <TextView
            android:id="@+id/secondID"
            android:layout_width="376dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/second"
            android:textAlignment="center"
            android:textColor="@color/blue_grey_100"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstID" />

        <TextView
            android:id="@+id/thirdID"
            android:layout_width="376dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/third"
            android:textAlignment="center"
            android:textColor="@color/blue_grey_100"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/secondID" />

        <TextView
            android:id="@+id/forthID"
            android:layout_width="376dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/forth"
            android:textAlignment="center"
            android:textColor="@color/blue_grey_100"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/thirdID" />

        <TextView
            android:id="@+id/fifthID"
            android:layout_width="376dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/fifth"
            android:textAlignment="center"
            android:textColor="@color/blue_grey_100"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forthID" />

        <TextView
            android:id="@+id/sixthID"
            android:layout_width="376dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/sixth"
            android:textAlignment="center"
            android:textColor="@color/blue_grey_100"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fifthID" />

        <TextView
            android:id="@+id/seventhID"
            android:layout_width="376dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/seventh"
            android:textAlignment="center"
            android:textColor="@color/blue_grey_100"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sixthID" />

        <TextView
            android:id="@+id/eighthID"
            android:layout_width="376dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/eighth"
            android:textAlignment="center"
            android:textColor="@color/blue_grey_100"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seventhID" />

        <TextView
            android:id="@+id/ninthID"
            android:layout_width="376dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/ninth"
            android:textAlignment="center"
            android:textColor="@color/blue_grey_100"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eighthID" />

        <TextView
            android:id="@+id/tenthID"
            android:layout_width="376dp"
            android:layout_height="27dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/tenth"
            android:textAlignment="center"
            android:textColor="@color/blue_grey_100"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ninthID" />
    </android.support.constraint.ConstraintLayout>

</LinearLayout>